<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTips"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bt1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/continue_game" />

    <Button
        android:id="@+id/bt2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/menu" />

    <Button
        android:id="@+id/bt3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/again" />
</LinearLayout>
